# suboptimal

./: .clang-format  .clang-tidy  .gitignore  .styleguide  .styleguide-license  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build.yml  sanitizers.yml
examples/derivatives/: main.cpp
examples/elevatorMPC/: Dynamics.h  ElevatorMPC.h  dynamics.h  main.cpp
include/suboptimal/: LinearProblem.h  NonlinearProblem.h
include/suboptimal/autodiff/: Expression.h  ExpressionType.h  Linearity.h  Variable.h  derivatives.h
include/suboptimal/solver/: simplex.h
include/suboptimal/solvers/: ExitStatus.h  SolverExitStatus.h
include/suboptimal/solvers/interiorpoint/: InteriorPoint.h  InteriorPointConfig.h  InteriorPointExitStatus.h
include/suboptimal/solvers/linear/: Simplex.h  SimplexPivotRule.h  SimplexSolverConfig.h  simplex.h
include/suboptimal/solvers/newton/: Newton.h  NewtonConfig.h
include/suboptimal/solvers/simplex/: Simplex.h  SimplexConfig.h  SimplexExitStatus.h  SimplexPivotRule.h
include/suboptimal/util/: Assert.h  concepts.h
src/: LinearProblem.cpp  NonlinearProblem.cpp  main.cpp
src/autodiff/: Derivatives.cpp  Expression.cpp  Variable.cpp  derivatives.cpp
src/solver/: simplex.cpp
src/solvers/: RegularizedLDLT.h
src/solvers/interiorpoint/: InteriorPoint.cpp
src/solvers/linear/: Simplex.cpp  simplex.cpp
src/solvers/newton/: Newton.cpp
src/solvers/simplex/: Simplex.cpp
src/util/: ComparisonUtil.h  FinalAction.h  LinearExpressionUtil.h  SolverProfiler.h  assert.h  comparison_util.h  expression_util.h  linear_expression_util.h
test/: LinearProblemTest.cpp  LinearProblem_test.cpp  simplex_test.cpp
test/autodiff/: GradientTest.cpp  HessianTest.cpp  JacobianTest.cpp  VariableTest.cpp  Variable_test.cpp  derivatives_test.cpp  gradient_test.cpp  hessian_test.cpp  jacobian_test.cpp
test/solvers/linear/: SimplexFailureTest.cpp  SimplexTest.cpp  simplex_fail_test.cpp  simplex_test.cpp
test/solvers/newton/: NewtonTest.cpp
test/solvers/simplex/: SimplexFailureTest.cpp  SimplexTest.cpp
